--- a/src/css/responsiva.css
+++ b/src/css/responsiva.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
     body {
         font-size: 6vw;
     }
@@ -16,7 +16,7 @@
     }
 }
 
-@media only screen and (min-width: 600px) and (max-width: 1200px) {
+@media screen and (min-width: 600px) and (max-width: 1200px) {
     section {
         padding: 2em;
     }
