--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,6 @@
 @charset 'UTF-8';
 
+/* Importação de fonte */
 @font-face {
     font-family: 'cordel';
     src: url(../fontes/cordel_rustika/Cordel\ Rustika.otf) format(opentype);
@@ -12,29 +13,37 @@
     padding: 0;
     font-size: 1em;
 }
-:root {
-    --font-padrao: 'Arial', 'sans-serif';
-    --fonte-titulo: 'cordel';
-    --font-manual: 'Sriracha', cursive;
-}
 html, body {
     font: 1.5em var(--font-padrao);
     background-color: darkgray;
     scroll-behavior: smooth;
     min-height: 100vh;
 }
+
 a {
     color: white;
     text-decoration: none;
     font-weight: bolder;
     transition-duration: .2s;
 }
-a:hover {
+a:focus-visible {
+    outline: auto;
+    padding: 0.1em;
+}
+a:hover,
+a:focus-visible {
     text-decoration: underline;
     color: lightgray;
 }
 a:active {
     color: gray;
+}
+
+/* Variáveis CSS */
+:root {
+    --font-padrao: 'Arial', 'sans-serif';
+    --fonte-titulo: 'cordel';
+    --font-manual: 'Sriracha', cursive;
 }
 
 /* O corpo do site */
@@ -60,7 +69,7 @@ header > p {
 /* O conteúdo do site */
 
 section {
-    padding: 10vh 2em;
+    padding: 10vh 3em;
     font-family: var(--font-manual);
     line-height: 2em;
 }
@@ -75,7 +84,7 @@ section.normal {
 }
 
 section.imagem {
-    background-color: rgb(51, 51, 51);
+    background-color: #333333;
     color: white;
     box-shadow: inset 6px 6px 13px 0 rgba(0, 0, 0, 0.336);
     background-size: cover;
@@ -83,7 +92,7 @@ section.imagem {
 }
 
 section.imagem > p {
-    background-color: rgba(0, 0, 0, 0.507);
+    background-color: #00000081;
     width: max-content;
     padding: 5%;
     text-shadow: 1px 1px 0 black;
@@ -106,4 +115,26 @@ footer {
     color: white;
     text-align: center;
     padding: 1.5em;
+}
+
+footer #topo {
+    cursor: pointer;
+    background-color: white;
+    color: black;
+    font-size: 2em;
+    padding: 0.5%;
+    transition-duration: .4s;
+}
+footer #topo:hover,
+footer #topo:focus-visible {
+    background-color: lightgray;
+}
+footer #topo:active {
+    background-color: gray;
+    color: white;
+    transition-duration: .2s;
+}
+
+footer p {
+    margin-top: 1em;
 }
