--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,13 +1,6 @@
-@charset 'UTF-8';
-
-/* Importação de fonte */
-@font-face {
-    font-family: 'cordel';
-    src: url(../fontes/cordel_rustika/Cordel\ Rustika.otf) format(opentype);
-}
+@charset "UTF-8";
 
 /* A mente do site */
-
 * {
     margin: 0;
     padding: 0;
@@ -15,19 +8,15 @@
 }
 html, body {
     font: 1.5em var(--font-padrao);
-    background-color: darkgray;
-    scroll-behavior: smooth;
     min-height: 100vh;
 }
 
 a {
     color: white;
-    text-decoration: none;
     font-weight: bolder;
     transition-duration: .2s;
 }
 a:focus-visible {
-    outline: auto;
     padding: 0.1em;
 }
 a:hover,
@@ -37,13 +26,6 @@ a:focus-visible {
 }
 a:active {
     color: gray;
-}
-
-/* Variáveis CSS */
-:root {
-    --font-padrao: 'Arial', 'sans-serif';
-    --fonte-titulo: 'cordel';
-    --font-manual: 'Sriracha', cursive;
 }
 
 /* O corpo do site */
@@ -67,7 +49,6 @@ header > p {
 }
 
 /* O conteúdo do site */
-
 section {
     padding: 10vh 3em;
     font-family: var(--font-manual);
@@ -76,6 +57,19 @@ section {
 
 section > p {
     padding-bottom: 2em;
+    animation: fade 1s ease-out;
+    animation-timeline: view();
+    animation-range: cover -10% cover 36%;
+}
+@keyframes fade {
+    from {
+        opacity: 0;
+        translate: -10vw 0;
+    }
+    to {
+        opacity: 1;
+        translate: 0 0;
+    }
 }
 
 section.normal {
