--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -25,7 +25,7 @@ a {
     text-decoration: none;
 }
 
-:focus {
+:focus-visible {
     outline: auto;
 }
 
@@ -54,7 +54,7 @@ a {
     background-color: gray;
 }
 
-/* Efeito de aparecer página inteira */
+/* Animações */
 @keyframes aparecer {
     0% {
         transform: translateX(-5px);
@@ -63,5 +63,16 @@ a {
     100% {
         transform: translateX(0px);
         opacity: 1;
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: 0;
+        translate: -10vw 0;
+    }
+    to {
+        opacity: 1;
+        translate: 0 0;
     }
 }
